syntax = "proto3";
package com.gtel.microservice.product;

option java_multiple_files = true;

option java_package = "vn.gtel.user.grpc";
option java_outer_classname = "UserGrpc";

service UserGrpcService {
  rpc GetUserDetail(GetUserDetailGrpcRequest) returns(GetUserDetailGrpcResponse);
}

message GetUserDetailGrpcRequest {
  int64 id = 1;
}


message GetUserDetailGrpcResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string phoneNumber = 4;
  string fullName = 5;
  int32 status = 6;
  string balance = 7;
}




